# docs/swagger.json
@@ -10,6 +10,11 @@
     "paths": {
         "/manager/v1/convert": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Realiza upload e conversão de um arquivo MP3 para OGG",
                 "consumes": [
                     "multipart/form-data"
@@ -70,6 +75,11 @@
         },
         "/manager/v1/download": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Realiza o download de um arquivo salvo, baseado no path informado",
                 "produces": [
                     "application/octet-stream"
@@ -117,6 +127,11 @@
         },
         "/manager/v1/upload": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Recebe um arquivo via multipart/form e salva no diretório de arquivos",
                 "consumes": [
                     "multipart/form-data"
@@ -167,6 +182,14 @@
                     }
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Forneça o token no formato: Bearer \u003ctoken\u003e",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
